# nlip-multiagent-news-demo

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
demo/: __init__.py
demo/inter_agent/: langchain_coordinator.py  llamaindex_news_worker.py  llamaindex_stock_worker.py  llamaindex_worker.py
demo/shared/: __init__.py  news_tools.py  nlip_client.py  stock_tools.py  weather_tools.py
demo/standalone/: langchain_standalone.py  llamaindex_standalone.py
